--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "aos": "^2.3.4",
     "framer-motion": "^6.3.10",
-    "react": "^18.0.0",
+    "hook-form": "^0.0.1",
+    "react": "^18.1.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0"
